fixed alignment

--- a/src/app.css
+++ b/src/app.css
@@ -174,7 +174,6 @@ p, h1, h2, h3, h4, h5, h6 {
 h1 {
   text-align: center;
   margin-top: 0;
-  margin-bottom: 1rem;
 }
 
 header,
